# p2p-wallet

./: .hlint.yaml  AppImageBuilder.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  create-appimage.sh  p2p-wallet.cabal
app/: Main.hs
app/P2PWallet/: Database.hs  Information.hs  MonomerOptics.hs  Plutus.hs  Prelude.hs
app/P2PWallet/Actions/: AddWallet.hs  AssembleWitnesses.hs  BackupFiles.hs  BalanceTx.hs  BuildTxBody.hs  CalculateMinUTxOValue.hs  Database.hs  ExportHwKey.hs  ExportTxBody.hs  LookupPools.hs  SignTx.hs  SignTxBody.hs  SubmitTx.hs  SyncAftermarket.hs  SyncLoans.hs  SyncOptions.hs  SyncOrderBooks.hs  SyncWallets.hs  Utils.hs  WitnessTxBody.hs
app/P2PWallet/Actions/Query/: Koios.hs
app/P2PWallet/Data/: AddressBook.hs  App.hs  AppModel.hs  Core.hs  Database.hs  Files.hs  FilterLang.hs  Lens.hs  Plutus.hs  Profile.hs  StakeReward.hs  TickerMap.hs  Transaction.hs  Wallets.hs
app/P2PWallet/Data/App/: Common.hs  Config.hs  Delegation.hs  Home.hs  TxBuilder.hs
app/P2PWallet/Data/AppModel/: AddressBook.hs  AddressBookModel.hs  AftermarketModel.hs  Common.hs  Delegation.hs  DelegationModel.hs  DexModel.hs  Home.hs  HomeModel.hs  LendingModel.hs  OptionsModel.hs  ProfileModel.hs  TickerRegistry.hs  TickerRegistryModel.hs  TxBuilder.hs  TxBuilderModel.hs
app/P2PWallet/Data/AppModel/AftermarketModel/: BidderModel.hs  BuyerModel.hs  SellerModel.hs
app/P2PWallet/Data/AppModel/AftermarketModel/BuyerModel/: AllSalesFilterModel.hs  OwnBidsFilterModel.hs
app/P2PWallet/Data/AppModel/AftermarketModel/SellerModel/: CurrentBidsFilterModel.hs  OpenSalesFilterModel.hs
app/P2PWallet/Data/AppModel/LendingModel/: ActiveLoanConfiguration.hs  BorrowModel.hs  LendModel.hs  LoanAskConfiguration.hs  LoanOfferConfiguration.hs  ResearchModel.hs
app/P2PWallet/Data/AppModel/LendingModel/BorrowModel/: ActiveLoansFilterModel.hs  LenderOffersFilterModel.hs  OpenAsksFilterModel.hs
app/P2PWallet/Data/AppModel/LendingModel/LendModel/: OpenOffersFilterModel.hs  RequestsFilterModel.hs
app/P2PWallet/Data/AppModel/OptionsModel/: BuyerModel.hs  ResearchModel.hs  WriterModel.hs
app/P2PWallet/Data/AppModel/TxBuilder/: ChangeOutput.hs  UserInput.hs  UserOutput.hs
app/P2PWallet/Data/AppModel/TxBuilderModel/: AftermarketBuilderModel.hs  ChangeOutput.hs  CollateralInput.hs  LoanBuilderModel.hs  OptionsBuilderModel.hs  SwapBuilderModel.hs  TestMint.hs  UserCertificate.hs  UserInput.hs  UserOutput.hs  UserWithdrawal.hs
app/P2PWallet/Data/Core/: AddressBook.hs  AddressEntryId.hs  Asset.hs  AssetMaps.hs  Bech32Address.hs  BorrowerInformation.hs  Config.hs  DerivationPath.hs  HardwareDevice.hs  Internal.hs  Network.hs  PaymentId.hs  PoolID.hs  Profile.hs  ProfileId.hs  RegistrationStatus.hs  SellerInformation.hs  StakeId.hs  StakeReward.hs  Transaction.hs  TxBody.hs  TxCBOR.hs  Wallets.hs  Witness.hs
app/P2PWallet/Data/Core/Internal/: AppError.hs  Assets.hs  Bech32Address.hs  Config.hs  DRepID.hs  DerivationPath.hs  Files.hs  HardwareDevice.hs  KeyDerivation.hs  KeyWitness.hs  Network.hs  Notification.hs  PoolID.hs  PrimaryKeys.hs  ReferenceScript.hs  RegistrationStatus.hs  TxCBOR.hs  Witness.hs
app/P2PWallet/Data/Core/Wallets/: DexWallet.hs  LoanWallet.hs  MarketWallet.hs  OptionsWallet.hs  PaymentWallet.hs  StakeWallet.hs
app/P2PWallet/Data/Database/: Create.hs  Delete.hs  Insert.hs  Pattern.hs  Query.hs
app/P2PWallet/Data/DeFi/: CardanoAftermarket.hs  CardanoLoans.hs  CardanoOptions.hs
app/P2PWallet/Data/DeFi/CardanoAftermarket/: Internal.hs
app/P2PWallet/Data/DeFi/CardanoLoans/: Internal.hs
app/P2PWallet/Data/DeFi/CardanoOptions/: Internal.hs
app/P2PWallet/Data/DeFi/CardanoSwaps/: Common.hs  OneWaySwaps.hs  TwoWaySwaps.hs
app/P2PWallet/Data/Koios/: AddressUTxO.hs  AssetTransaction.hs  BudgetEstimations.hs  DRep.hs  EpochParams.hs  LinkedPaymentAddresses.hs  MintTransaction.hs  Pool.hs  PostTypes.hs  StakeAccount.hs  StakeReward.hs  Tokenomics.hs  Transaction.hs  TxSubmissionResponse.hs
app/P2PWallet/Data/Wallets/: PaymentWallet.hs  StakeWallet.hs
app/P2PWallet/GUI/: Colors.hs  EventHandler.hs  HelpMessages.hs  Icons.hs  MonomerOptics.hs  UIBuilder.hs
app/P2PWallet/GUI/EventHandler/: AddressBookEvent.hs  AftermarketEvent.hs  DelegationEvent.hs  DexEvent.hs  HomeEvent.hs  LendingEvent.hs  OptionsEvent.hs  ProfileEvent.hs  TickerRegistryEvent.hs  TxBuilderEvent.hs
app/P2PWallet/GUI/EventHandler/AftermarketEvent/: BuyerEvent.hs  SellerEvent.hs
app/P2PWallet/GUI/EventHandler/LendingEvent/: BorrowEvent.hs  LendEvent.hs  ResearchEvent.hs
app/P2PWallet/GUI/EventHandler/OptionsEvent/: BuyerEvent.hs  ResearchEvent.hs  WriterEvent.hs
app/P2PWallet/GUI/EventHandler/TxBuilderEvent/: AftermarketBuilderEvent.hs  LoanBuilderEvent.hs  OptionsBuilderEvent.hs  SwapBuilderEvent.hs
app/P2PWallet/GUI/Widgets/: AddStakeWallet.hs  AddressBook.hs  Aftermarket.hs  Delegation.hs  Dex.hs  Home.hs  Lending.hs  MainMenu.hs  Networks.hs  Notifications.hs  Options.hs  Profiles.hs  Settings.hs  TickerRegistry.hs  TxBuilder.hs
app/P2PWallet/GUI/Widgets/Aftermarket/: Buyer.hs  Common.hs  Seller.hs
app/P2PWallet/GUI/Widgets/Delegation/: AddStakeWallet.hs  Details.hs  PairStakeWallet.hs  PoolPicker.hs  RegisteredPools.hs  RewardHistory.hs  Summary.hs  WatchStakeWallet.hs
app/P2PWallet/GUI/Widgets/Dex/: Positions.hs  Trade.hs  Transactions.hs
app/P2PWallet/GUI/Widgets/Home/: About.hs  AddPaymentWallet.hs  Assets.hs  Details.hs  NativeAssets.hs  PairPaymentWallet.hs  Transactions.hs  UTxOs.hs  WatchPaymentWallet.hs
app/P2PWallet/GUI/Widgets/Internal/: Custom.hs  Popup.hs
app/P2PWallet/GUI/Widgets/Lending/: Borrow.hs  Lend.hs  Research.hs
app/P2PWallet/GUI/Widgets/Options/: Buyer.hs  Research.hs  Writer.hs
app/P2PWallet/GUI/Widgets/TxBuilder/: AddCertificate.hs  AddChangeOutput.hs  AddInput.hs  AddOutput.hs  AddWithdrawal.hs  AftermarketBuilder.hs  ExportTxBody.hs  Internal.hs  LoanBuilder.hs  OptionsBuilder.hs  StatusBar.hs  Summary.hs  SwapBuilder.hs  TestMint.hs  UserCertificates.hs  UserInputs.hs  UserOutputs.hs  UserWithdrawals.hs
(+103 files in other folders)
